# JuliaCalls

./: .gitignore  README.md
C/: c_sum_julia.jl  calc_mean.c  juliaCallsC.jl  mean.cpp
C++/: README.md
C++/examples/: CMakeLists.txt  compile.sh  hello.cpp  note.txt  test.jl
C/ex1/: foo.c  juliaCallsC.jl
C/ex2/: juliaCallsC.jl  main.c
C/trace2d/: ctrace2d_single.c
CCallsJulia/: Hello.jl  main.c
CCallsJulia/ex1/: test.c
Fortran/: README.md
Fortran/ex1/: simpleModule.f95
Fortran/ex2/: Makefile  Modtest1.f90  Modtest2.f90  juliaCallsFortran.jl
JuliaCallsC/ex1/: Makefile  foo.h  main.c  test
JuliaCallsC/ex2/: Makefile  foo2.c  foo2.h
JuliaCallsC/trace2d/: Makefile  juliaCallsctrace2d.jl  juliaCallsctrace2d_single.jl
JuliaCallsFortran/: Makefile  README.md  juliaCallsFortran.jl
JuliaCallsFortran/ex1/: Makefile  juliaCallsFortran.jl  simpleModule.f95
JuliaCallsFortran/ex2/: Makefile  Modtest1.f90  Modtest2.f90  main.f90
JuliaCallsFortran/ex3/: Makefile  ModMpiTest.f90  juliaCallsFortran.jl
MATLAB/: test_JuliaCallsMATLAB.jl
